ersatztv/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ersatztv-dashboard-basicauth
  namespace: ersatztv
spec:
  basicAuth:
    secret: traefik-dashboard-auth
