ersatztv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ersatztv        # < name of the deployment
  namespace: ersatztv   # < namespace where place the deployment and pods
  labels:
    app: ersatztv      # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: ersatztv
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: ersatztv
    spec:
      volumes:
      - name: ersatztv-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/ersatztv-config # < pvc name we created in the previous yaml
      - name: ersatztv-series
        hostPath:
          path: /mnt/series
      - name: ersatztv-movies
        hostPath:
          path: /mnt/movies 
      - name: ersatztv-dutchmovies
        hostPath:
          path: /mnt/nederlandse_films
      containers:
      - image: jasongdove/ersatztv:latest-vaapi # < the name of the docker image we will use
        name: ersatztv                      # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        

        ports:                              # < the ports required (see container documentation)
         - containerPort: 8096
           name: webinterface
           protocol: TCP
        volumeMounts:                       # < the volume mount in the container. Look at the relation volumelabel->pvc->pv
         - mountPath: /root/.local/share/ersatztv              # < mount location in the container
           name: ersatztv-config               # < volumelabel configured earlier in the yaml file
         - mountPath: /media/series
           name: ersatztv-series
         - mountPath: /media/movies
           name: ersatztv-movies
         - mountPath: /media/dutch-movies
           name: ersatztv-dutchmovies
