ersatztv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv-service    # < name of the service
  namespace: ersatztv # < namespace where place the deployment and pods
spec:
  selector:
    app: ersatztv # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 8409
