ersatztv/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ersatztv-ingress
  namespace: ersatztv
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tv.mangelschots.org`)
      kind: Rule
      services:
        - name: ersatztv-service
          port: 8409
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: ersatztv
  tls:
    secretName: movies-mangelschots-org-tls
